# Roshis-car

./: .gitignore  AGENTS.md  CLAUDE.md  app.py  main.py  package-lock.json  setup_system.sh  system.env  xbox_controller.py
esp32/: .gitignore  platformio.ini
esp32/lib/core/: isensor.h  robot_config.cpp  robot_config.h  utils.h
esp32/lib/drive/: drivebase.cpp  drivebase.h  drivetrain.cpp  motor.cpp  motor.h
esp32/lib/io/: feeder.h  i2c_bus.cpp  i2c_bus.h  i2c_sensor.h  led_controller.h
esp32/lib/protocol/: protocol.cpp  protocol.h
esp32/lib/sensors/imu/: bmi160_imu.h
esp32/lib/sensors/tof/: tof_manager.cpp  tof_manager.h  tof_to_protocol_print_test.cpp
esp32/src/: configs.h  drivetrain.cpp  drivetrain.h  feeder.cpp  led_controller.cpp  main.cpp  protocol.cpp  protocol.h  test_tof_sensor.cpp  utils.cpp
esp32/src/test/drive/: drivebase_protocol_test.cpp  (+2 more)
esp32/test/: all_wheel_test.cpp  drive_arcade_mode_test.cpp  drive_via_protocol_test.cpp  main.cpp  protocol_example.cpp  rear_wheel_test.cpp  test_feeder.cpp  test_pwm.cpp  test_servo.cpp
pi/: .gitignore  app.py  com_proto.py  docker-compose.yml  requirements.txt  test_baseline_rx.py  test_cobs_roundtrip.py  test_controller.py  test_serial_raw.py  test_tx_rx.py
pi/app/: README.md  app.py  com_proto.py  config.py  main.py  utils.py  xbox_controller.py
pi/app/audio_input/: mic.py  old_mic.py
pi/app/controllers/: types.py  xbox_controller.py  xbox_pygame.py
pi/app/drive/: bridge.py  filters.py  mapping.py  types.py  xbox_drive_bridge.py
pi/app/protocol/: ndjson_serial.py  print_protocol.py
pi/app/runners/: test_drive_protocol.py  test_sounds.py  test_xbox_drive.py  voice_chat.py  xbox_demo_print.py  xbox_to_esp32.py  xbox_to_esp32_test.py
pi/app/sound/: __init__.py  play_sound.py  player.py  selector.py  soundbank.py
pi/app/sounds/: README.md  soundbank.yaml
pi/app/speech/: README.md  __init__.py  daro_llm.py  piper_speak.py  tts_speaker.py  wake.py  wyoming_piper_client.py
pi/app/trash/: main.py
pi/app/utils/: input_helpers.py  pair_xbox.py  xbox_quick_connect.sh
pi/daro_ros2_ws/: README.md  start_daro.sh
pi/daro_ros2_ws/config/: joy_buttons_params.yaml
pi/daro_ros2_ws/src/: README.md
pi/daro_ros2_ws/src/daro_nav/: package.xml  setup.py
pi/daro_ros2_ws/src/daro_nav/config/: nav2_params.yaml
pi/daro_ros2_ws/src/daro_nav/launch/: nav.launch.py  nav2_stack.launch.py
pi/daro_ros2_ws/src/daro_slam/: package.xml  setup.py
pi/daro_ros2_ws/src/daro_slam/config/: ekf.yaml  lidar.yaml  slam.yaml
pi/daro_ros2_ws/src/daro_slam/launch/: lidar.launch.py  localization.launch.py  slam.launch.py  slam_core.launch.py
(+71 files in other folders)
