<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>daro_nav</name>
  <version>0.0.0</version>
  <description>DARO autonomous navigation — Nav2 stack with AMCL localization in a saved map.</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Nav2 core -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <exec_depend>nav2_recoveries</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_dwb_controller</exec_depend>

  <!-- Robot hardware and SLAM stacks -->
  <exec_depend>daro_bringup</exec_depend>
  <exec_depend>daro_slam</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
