<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>daro_slam</name>
  <version>0.0.0</version>
  <description>DARO SLAM stack — LiDAR driver, EKF localization, and SLAM Toolbox mapping.</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Hardware bringup (provides /wheel/odom, /imu/data_raw) -->
  <exec_depend>daro_bringup</exec_depend>
  <exec_depend>daro_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
